# portix-serv

./: Cargo.toml
.github/workflows/: release-native-libs.yml  security-scan.yml
examples/: rdp_test.rs
src/: api.rs  frb_generated.rs
src/application/: autocomplete_service.rs  mod.rs  rdp_session_manager.rs  session_manager.rs
src/domain/: errors.rs  mod.rs  rdp_profile.rs  session.rs
src/infrastructure/: mod.rs  rdp_client.rs  rdpdr.rs  ssh_client.rs
src/infrastructure/autocomplete/: mod.rs  option.rs
