[package]
name = "portix-serv"
version = "0.1.0"
edition = "2024"

[lib]
name = "portix_serv"
crate-type = ["cdylib", "staticlib", "rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(frb_expand)"] }

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
flutter_rust_bridge = "=2.11.1"
once_cell = "1"
parking_lot = "0.12"
russh = { version = "0.60.2", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-util", "net"] }
tokio-rustls = "0.26"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
